WD-10176 - fix: update API types (#82)
* fix: update API types

* fix: add groups endpoints

* fix: build api files
